--- a/graduate_thesis_stevie_poppe_template.latex
+++ b/graduate_thesis_stevie_poppe_template.latex
@@ -294,8 +294,10 @@ $endif$
 \hfill \break
 \hfill \break
 \hfill \break
+\hfill \break
 \hspace*{-0.27cm}
 \makebox[\textwidth][c]{\includegraphics[width=\paperwidth]{$banner$}}
+\hfill \break
 \hfill \break
 \hfill \break
 \hfill \break
@@ -342,6 +344,9 @@ $abstract$
 \textbf{Keywords}
 
 $keywords$
+
+\blfootnote{$blfootnote$}
+
 
 \endgroup}
 
@@ -433,6 +438,33 @@ $endif$
 
 %\usepackage{sectsty}
 %\allsectionsfont{\normalfont\sffamily\bfseries}
+\usepackage{epigraph}
+\setlength\epigraphwidth{1\textwidth}
+\setlength\epigraphrule{0pt} % no line between
+\setlength\beforeepigraphskip{1\baselineskip} % space before and after epigraph
+\setlength\afterepigraphskip{2\baselineskip}
+\renewcommand*{\textflush}{flushright}
+\renewcommand*{\epigraphsize}{\normalsize\itshape}
+%\documentstyle[fancychapters]{report}
+\usepackage{graphicx}
+\newcommand\fauxsc[1]{\fauxschelper#1 \relax\relax}
+\def\fauxschelper#1 #2\relax{%
+  \fauxschelphelp#1\relax\relax%
+  \if\relax#2\relax\else\ \fauxschelper#2\relax\fi%
+}
+\def\Hscale{.85}\def\Vscale{.72}\def\Cscale{1.10}
+\def\fauxschelphelp#1#2\relax{%
+  \ifnum`#1>``\ifnum`#1<`\{\scalebox{\Hscale}[\Vscale]{\uppercase{#1}}\else%
+    \scalebox{\Cscale}[1]{#1}\fi\else\scalebox{\Cscale}[1]{#1}\fi%
+  \ifx\relax#2\relax\else\fauxschelphelp#2\relax\fi}
+
+% footnotes https://tex.stackexchange.com/questions/30720/footnote-without-a-marker
+\newcommand\blfootnote[1]{%
+  \begingroup
+  \renewcommand\thefootnote{}\footnote{#1}%
+  \addtocounter{footnote}{-1}%
+  \endgroup
+}
 
 \begin{document}
 
