--- a/bibtex/Master.bib
+++ b/bibtex/Master.bib
@@ -519,7 +519,7 @@ The main part of the title, "What the Dormouse Said," is a reference to a line a
 	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\8ZKHVX2T\\the-only-true-winners-of-this-election-are-trolls.html:text/html}
 }
 
-@misc{schreckinger_world_nodate,
+@misc{schreckinger_world_2017,
 	title = {World {War} {Meme}},
 	url = {https://politi.co/2qK8kHH},
 	abstract = {How a group of anonymous keyboard commandos conquered the internet for Donald Trump—and plans to deliver Europe to the far right.},
@@ -527,6 +527,8 @@ The main part of the title, "What the Dormouse Said," is a reference to a line a
 	urldate = {2019-06-17},
 	journal = {POLITICO Magazine},
 	author = {Schreckinger, Ben},
+	month = apr,
+	year = {2017},
 	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\EZ9DNVB7\\memes-4chan-trump-supporters-trolls-internet-214856.html:text/html}
 }
 
@@ -6015,4 +6017,525 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	year = {2008},
 	note = {OCLC: 227016674},
 	file = {Table of Contents PDF:C\:\\Users\\stevi\\Juris-M\\storage\\FRXB9TEW\\Žižek - 2008 - The sublime object of ideology.pdf:application/pdf}
+}
+
+@misc{noauthor_wikiwarmonitor_nodate,
+	title = {{WikiWarMonitor} {Homepage}},
+	url = {http://wwm.phy.bme.hu/light.html},
+	urldate = {2019-07-07},
+	file = {WikiWarMonitor Homepage:C\:\\Users\\stevi\\Juris-M\\storage\\D3DTC5II\\light.html:text/html}
+}
+
+@misc{noauthor_don_nodate,
+	title = {Don enragedo kimchis},
+	url = {https://www.youtube.com/channel/UCf-tmHZroA5K0LdZZK3h8Wg},
+	abstract = {日本は大東亜戦争勝った 今回帝国は東南アジア地域に武力進攻せざるを得なくなったが、それは決して東南アジア住民に対して敵意を持つからではない。ただ、米英から東南アジア住民に対し加えられてきた暴政を排除し、東南アジアを白人によって植民地化される前の、明白なる本来在るべき姿へ戻し、ともに協力して繁栄することを願うからで...},
+	language = {nl-NL},
+	urldate = {2019-07-07},
+	journal = {YouTube},
+	note = {日本は大東亜戦争勝った 今回帝国は東南アジア地域に武力進攻せざるを得なくなったが、それは決して東南アジア住民に対して敵意を持つからではない。ただ、米英から東南アジア住民に対し加えられてきた暴政を排除し、東南アジアを白人によって植民地化される前の、明白なる本来在るべき姿へ戻し、ともに協力して繁栄することを願うからで...},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\Y9XY7RMR\\UCf-tmHZroA5K0LdZZK3h8Wg.html:text/html}
+}
+
+@article{yasseri_most_2013,
+	title = {The {Most} {Controversial} {Topics} in {Wikipedia}: {A} {Multilingual} and {Geographical} {Analysis}},
+	issn = {1556-5068},
+	shorttitle = {The {Most} {Controversial} {Topics} in {Wikipedia}},
+	url = {http://www.ssrn.com/abstract=2269392},
+	doi = {10.2139/ssrn.2269392},
+	language = {en},
+	urldate = {2019-07-07},
+	journal = {SSRN Electronic Journal},
+	author = {Yasseri, Taha and Spoerri, Anselm and Graham, Mark and Kertesz, Janos},
+	year = {2013},
+	file = {Yasseri et al. - 2013 - The Most Controversial Topics in Wikipedia A Mult.pdf:C\:\\Users\\stevi\\Juris-M\\storage\\R8VBPCER\\Yasseri et al. - 2013 - The Most Controversial Topics in Wikipedia A Mult.pdf:application/pdf}
+}
+
+@misc{cnn_wiki_nodate,
+	title = {Wiki wars: {The} 10 most controversial {Wikipedia} pages},
+	shorttitle = {Wiki wars},
+	url = {https://www.cnn.com/2013/07/24/tech/web/controversial-wikipedia-pages/index.html},
+	abstract = {They've long been considered topics that aren't polite to discuss at the dinner table. As it turns out, politics and religion can get touchy on Wikipedia too.},
+	urldate = {2019-07-07},
+	journal = {CNN},
+	author = {CNN, By Doug Gross},
+	note = {They've long been considered topics that aren't polite to discuss at the dinner table. As it turns out, politics and religion can get touchy on Wikipedia too.},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\CDRJABYQ\\index.html:text/html}
+}
+
+@misc{bar-_-seven_vs_nodate,
+	title = {{反対派ＶＳ}２ちゃんねらー},
+	url = {https://baknews.exblog.jp/2484862/},
+	abstract = {本日、杉並区教育委員会による、中学校教科書の採択が行われましたので、取材に行ってきました。 杉並区といえば、「つくる会」教科書反対派が「扶桑社教科書採択...},
+	language = {ja},
+	urldate = {2019-07-08},
+	journal = {BAK-NEWS},
+	author = {bar-\_-seven},
+	note = {本日、杉並区教育委員会による、中学校教科書の採択が行われましたので、取材に行ってきました。
+杉並区といえば、「つくる会」教科書反対派が「扶桑社教科書採択...},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\7E8EPAD4\\2484862.html:text/html}
+}
+
+@misc{kirkup_obituary:_1995,
+	title = {Obituary: {Ryoichi} {Sasakawa}},
+	shorttitle = {Obituary},
+	url = {http://www.independent.co.uk/news/people/obituary-ryoichi-sasakawa-1592324.html},
+	abstract = {The last of Japan's A-class war criminals has died, a nonagenarian multimillionaire. In the land where most people do their utmost to pass unnoticed, Ryoichi Sasakawa stood out as a monster of egotism, greed, ruthless ambition, political deviousness and with a love of the limelight equalled in his time only by his fellow right-winger Yukio Mishima. Yet he was almost a lovable},
+	language = {en},
+	urldate = {2019-07-09},
+	journal = {The Independent},
+	author = {Kirkup, James},
+	month = jul,
+	year = {1995},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\MY7XURWI\\obituary-ryoichi-sasakawa-1592324.html:text/html}
+}
+
+@article{cohen_wikipedia_2009,
+	chapter = {Media},
+	title = {Wikipedia {Looks} {Hard} at {Its} {Culture}},
+	issn = {0362-4331},
+	url = {https://www.nytimes.com/2009/08/31/business/media/31link.html},
+	abstract = {At an awkward moment, Wikipedia has hired consultants to tell it how to diversify its contributors and its offerings.},
+	language = {en-US},
+	urldate = {2019-07-11},
+	journal = {The New York Times},
+	author = {Cohen, Noam},
+	month = aug,
+	year = {2009},
+	note = {At an awkward moment, Wikipedia has hired consultants to tell it how to diversify its contributors and its offerings.},
+	keywords = {Computers and the Internet, Consultants, Wikimedia Foundation, Wikipedia}
+}
+
+@misc{orsini_how_2015,
+	title = {How {The} 4chan {Sale} {Returns} {The} {Controversial} {Forum} {To} {Its} {Anime} {Roots}},
+	url = {https://www.forbes.com/sites/laurenorsini/2015/09/21/4chan-sale-2channel-moot-christopher-poole-hiroyuki-nishimura/},
+	abstract = {Less than a year after stepping down as 4chan administrator, Christopher Poole is selling the controversial Internet forum to Hiroyuki Nishimura, founder of 2Channel, the Japanese anime forum that inspired Poole to launch an American version in 2003, when he was 15 years old. It’s a move Poole has called coming full circle.},
+	language = {en},
+	urldate = {2019-07-11},
+	journal = {Forbes},
+	author = {Orsini, Lauren},
+	month = sep,
+	year = {2015},
+	note = {Less than a year after stepping down as 4chan administrator, Christopher Poole is selling the controversial Internet forum to Hiroyuki Nishimura, founder of 2Channel, the Japanese anime forum that inspired Poole to launch an American version in 2003, when he was 15 years old.  It’s a move Poole has called coming full circle.},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\VRYYZ5KQ\\4chan-sale-2channel-moot-christopher-poole-hiroyuki-nishimura.html:text/html}
+}
+
+@misc{noauthor_alexa_2019,
+	title = {Alexa - {Top} {Sites} in {Japan} - {Alexa}},
+	url = {https://www.alexa.com/topsites/countries/JP},
+	urldate = {2019-07-12},
+	journal = {Alexa},
+	month = jul,
+	year = {2019},
+	file = {Alexa - Top Sites in Japan - Alexa:C\:\\Users\\stevi\\Juris-M\\storage\\CA8XC3HX\\JP.html:text/html}
+}
+
+@misc{noauthor_alexa_nodate-1,
+	title = {Alexa - {Top} sites},
+	shorttitle = {12/7/2019},
+	url = {https://www.alexa.com/topsites},
+	urldate = {2019-07-12},
+	journal = {Alexa},
+	file = {Alexa - Top sites:C\:\\Users\\stevi\\Juris-M\\storage\\ZHFUVKFV\\topsites.html:text/html}
+}
+
+@book{manovich_language_2001,
+	address = {Cambridge, Mass.},
+	series = {Leonardo},
+	title = {The language of new media},
+	isbn = {978-0-262-63255-3 978-0-262-13374-6},
+	language = {eng},
+	publisher = {MIT Press},
+	author = {Manovich, Lev},
+	year = {2001},
+	note = {OCLC: 231923976}
+}
+
+@article{bouvier_what_2015,
+	title = {What is a discourse approach to {Twitter}, {Facebook}, {YouTube} and other social media: connecting with other academic fields?},
+	volume = {10},
+	issn = {1744-7143, 1747-6615},
+	shorttitle = {What is a discourse approach to {Twitter}, {Facebook}, {YouTube} and other social media},
+	url = {http://www.tandfonline.com/doi/full/10.1080/17447143.2015.1042381},
+	doi = {10.1080/17447143.2015.1042381},
+	language = {en},
+	number = {2},
+	urldate = {2019-07-12},
+	journal = {Journal of Multicultural Discourses},
+	author = {Bouvier, Gwen},
+	month = may,
+	year = {2015},
+	pages = {149--162}
+}
+
+@book{atkinson_semiotic_2019,
+	address = {New York, NY},
+	series = {Routledge studies in governance and public policy},
+	title = {Semiotic analysis and public policy: connecting theory and practice},
+	isbn = {978-1-351-20599-3 978-1-351-20598-6 978-1-351-20596-2 978-1-351-20597-9},
+	shorttitle = {Semiotic analysis and public policy},
+	number = {34},
+	publisher = {Routledge},
+	editor = {Atkinson, Christopher L.},
+	year = {2019},
+	keywords = {Case studies, Policy sciences, Political aspects, Political planning, Semiotics},
+	annote = {Introduction -- Semiotic analysis and public policy : theory and practice -- On filth : food regulation, enforcement, and cheese -- A semiotic analysis of green public procurement -- New York City's conflicts of interest law : compliance versus ethical capacity -- Symbol and substance in local government workforce development : "first source" hiring programs -- By soil, blood, and administration : a narrative analysis of German immigration law -- Reforming the Affordable Care Act : a semiotic analysis of tweets using LIWC -- Economic and energy development and the goal of sustainability in Thailand : an argumentation analysis -- Bridging the gap between Intent and practice}
+}
+
+@book{fairclough_media_2010,
+	address = {London},
+	edition = {Repr},
+	title = {Media discourse},
+	isbn = {978-0-340-58889-5},
+	language = {eng},
+	publisher = {Bloomsbury Academic},
+	author = {Fairclough, Norman},
+	year = {2010},
+	note = {OCLC: 846449712},
+	annote = {Includes bibliographical references (p. ) and index}
+}
+
+@misc{adachi_eng._2017,
+	type = {Tweet},
+	title = {Eng. "{Asahi} {Shimbun}, die." (editorial) {Towards} the educational opening of '{Kake}', it is not settled with this},
+	url = {https://twitter.com/adachiyasushi/status/929462477770723328?ref_src=twsrc%5Etfw},
+	language = {ja},
+	urldate = {2019-07-13},
+	journal = {@adachiyasushi},
+	author = {Adachi, Yasushi},
+	month = nov,
+	year = {2017},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\F8HBQDK6\\929462477770723328.html:text/html}
+}
+
+@article{johnson_mixed_2004,
+	title = {Mixed {Methods} {Research}: {A} {Research} {Paradigm} {Whose} {Time} {Has} {Come}},
+	volume = {33},
+	url = {http://www.jstor.org/stable/3700093},
+	language = {en},
+	number = {7},
+	journal = {Educational Researcher},
+	author = {Johnson, R. Burke and Onwuegbuzie, Anthony J.},
+	year = {2004},
+	pages = {14--26},
+	file = {JohnsonMixedmethods2004.pdf:D\:\\JohnsonMixedmethods2004.pdf:application/pdf}
+}
+
+@misc{noauthor_gemki_nodate,
+	title = {Gemki {Fujii}},
+	url = {https://www.youtube.com/channel/UCjrnADUCHnOd2Tt5z7L6fpw},
+	abstract = {【CFG 藤井厳喜公式YouTubeチャンネル】 TV、一般メディアが伝えない世界のNEWSの裏側を鋭い分析、分かりやすいトークでお伝えします! 藤井厳喜( Gemki Fujii )の言論活動を中心に、国際問題、経済情勢解説、社会活動のメッセージを幅広く発信していきます。今後は英語でのNEWS解説、音楽活動、詩...},
+	language = {en-US},
+	urldate = {2019-07-13},
+	journal = {YouTube},
+	note = {【CFG 藤井厳喜公式YouTubeチャンネル】 TV、一般メディアが伝えない世界のNEWSの裏側を鋭い分析、分かりやすいトークでお伝えします! 藤井厳喜( Gemki Fujii )の言論活動を中心に、国際問題、経済情勢解説、社会活動のメッセージを幅広く発信していきます。今後は英語でのNEWS解説、音楽活動、詩...},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\JTNFS59S\\UCjrnADUCHnOd2Tt5z7L6fpw.html:text/html}
+}
+
+@inproceedings{aoki_virtual_1994,
+	title = {{VIRTUAL} {COMMUNITIES} {IN} {JAPAN}},
+	url = {https://www.ibiblio.org/pub/academic/communications/papers/Virtual-Communities-in-Japan},
+	urldate = {2019-07-13},
+	author = {Aoki, Kumiko},
+	year = {1994},
+	file = {:C\:\\Users\\stevi\\Juris-M\\storage\\ZN8S5PMP\\Virtual-Communities-in-Japan.html:text/html}
+}
+
+@book{markoff_what_2005,
+	address = {New York},
+	title = {What the dormouse said--: how the sixties counterculture shaped the personal computer industry},
+	isbn = {978-0-670-03382-9},
+	shorttitle = {What the dormouse said--},
+	publisher = {Viking},
+	author = {Markoff, John},
+	year = {2005},
+	keywords = {Computers and civilization, History, Microcomputers, Nineteen sixties}
+}
+
+@misc{silverman_meet_2017,
+	title = {Meet {The} {Online} {Porn} {Pioneer} {Who} {Created} {A} {News} {Site} {For} {Internet} {Trolls}},
+	url = {https://www.buzzfeednews.com/article/craigsilverman/meet-the-online-porn-pioneer-who-created-a-news-site-for-int},
+	abstract = {Jim Watkins wants to make The Goldwater the pre-eminent news source for the trolls of 8chan.},
+	language = {en},
+	urldate = {2019-07-13},
+	journal = {BuzzFeed News},
+	author = {SIlverman, Craig and Lytvynenko, Jane},
+	month = feb,
+	year = {2017},
+	note = {Jim Watkins wants to make The Goldwater the pre-eminent news source for the trolls of 8chan.},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\D3IL9XE9\\meet-the-online-porn-pioneer-who-created-a-news-site-for-int.html:text/html}
+}
+
+@misc{brewster_after_2019,
+	title = {After {The} {New} {Zealand} {Terror} {Attack}, {Here}’s {Why} 8chan {Won}’t {Be} {Wiped} {From} {The} {Web}},
+	url = {https://www.forbes.com/sites/thomasbrewster/2019/03/15/after-the-new-zealand-terror-attack-should-8chan-be-wiped-from-the-web/},
+	abstract = {The New Zealand terror attack shooter used 8chan to advertise a live stream of the atrocity. But what is 8chan and what can be done about it?},
+	language = {en},
+	urldate = {2019-07-13},
+	journal = {Forbes},
+	author = {Brewster, Thomas},
+	month = mar,
+	year = {2019},
+	note = {The New Zealand terror attack shooter used 8chan to advertise a live stream of the atrocity. But what is 8chan and what can be done about it?},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\HYSHWJF8\\after-the-new-zealand-terror-attack-should-8chan-be-wiped-from-the-web.html:text/html}
+}
+
+@misc{collins_anti-semitic_2019,
+	title = {Anti-{Semitic} open letter posted under name of synagogue shooting suspect},
+	url = {https://www.nbcnews.com/news/us-news/anti-semitic-open-letter-posted-online-under-name-chabad-synagogue-n999211},
+	abstract = {A user self-identifying himself as John Earnest posted an open letter to the far-right message board 8chan hours before a shooting near San Diego.},
+	language = {en},
+	urldate = {2019-07-13},
+	journal = {NBC News},
+	author = {Collins, Ben and Blankstein, Andrew},
+	month = apr,
+	year = {2019},
+	note = {A user identifying himself as John Earnest posted an open letter to the far-right message board 8chan hours before a shooting near San Diego.},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\YJ38VE6M\\anti-semitic-open-letter-online-under-chabad-synagogue-n999211.html:text/html}
+}
+
+@misc{stewart_8chan_2019,
+	title = {8chan, explained},
+	url = {https://www.vox.com/recode/2019/5/3/18527214/8chan-poway-synagogue-shooting-christchurch-john-earnest},
+	abstract = {The Christchurch and Poway shooters were both hanging out on the same toxic online platform. And no one knows what to do about it.},
+	urldate = {2019-07-13},
+	journal = {Vox},
+	author = {Stewart, Emily},
+	month = may,
+	year = {2019},
+	note = {The Christchurch and Poway shooters were both hanging out on the same toxic online platform. And no one knows what to do about it.},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\IWT5QQL4\\8chan-poway-synagogue-shooting-christchurch-john-earnest.html:text/html}
+}
+
+@misc{cnn_korean_2010,
+	title = {Korean cyber attack on 2ch {\textbar} {CNN} {Travel}},
+	url = {./},
+	abstract = {Korean netizens mount a cyber attack against Japanese BBS 2ch on March 1 after comments appear disrespecting figure skater Yu-Na Kim.},
+	language = {en},
+	urldate = {2019-07-14},
+	journal = {CNN},
+	author = {{CNN}},
+	month = mar,
+	year = {2010},
+	note = {South Koreans band together to attack Japan's controversial 2ch BBS for comments suggesting an improper win for ice skating gold medalist Yu-Na Kim},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\346CM84Z\\kimasada-rivalry-spurs-global-cyberwarfare-337659.html:text/html}
+}
+
+@article{mainichi_daily_news_author_2019,
+	chapter = {Entertainment},
+	title = {Author claims publisher cut ties after he criticized book by writer close to {Japan} {PM}},
+	url = {https://mainichi.jp/english/articles/20190517/p2a/00m/0na/005000c},
+	language = {en},
+	urldate = {2019-07-14},
+	journal = {Mainichi Daily News},
+	author = {{Mainichi Daily News}},
+	month = may,
+	year = {2019},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\5Y8J2SDH\\005000c.html:text/html}
+}
+
+@misc{noauthor__nodate-38,
+	title = {売り上げ好調 百田氏「日本国紀」に「コピペ」騒動 専門家の評価は？},
+	url = {https://mainichi.jp/articles/20181219/mog/00m/040/013000c},
+	abstract = {作家、百田尚樹氏の新刊「日本国紀」（幻冬舎）の売り上げが好調だ。その一方で、歴史書には通常ある参考資料や出典の記述がほとんどなく、インターネット上のフリー百科事典「ウィキペディア」や新聞などからの「コピペ」（コピー・アンド・ペースト）が多数あるのではないかとの指摘がソーシャル・ネットワーキング・サ},
+	language = {ja},
+	urldate = {2019-07-14},
+	journal = {毎日新聞},
+	note = {作家、百田尚樹氏の新刊「日本国紀」（幻冬舎）の売り上げが好調だ。その一方で、歴史書には通常ある参考資料や出典の記述がほとんどなく、インターネット上のフリー百科事典「ウィキペディア」や新聞などからの「コピペ」（コピー・アンド・ペースト）が多数あるのではないかとの指摘がソーシャル・ネットワーキング・サ},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\9C3W2HWN\\013000c.html:text/html}
+}
+
+@misc{yamamoto__2018,
+	title = {百田尚樹『日本国紀』コピペ論争と歴史通俗本の果てなき戦い（山本一郎） - {Yahoo}!ニュース},
+	url = {https://news.yahoo.co.jp/byline/yamamotoichiro/20181222-00108643/},
+	abstract = {幻冬舎から出版された百田尚樹さんの『日本国紀』刊行にあたり、その内容を巡って歴史的に正しくない説明が多く含まれ、またWikipediaや類書などからの引用表記なきコピペがあり批判が広がっています。},
+	language = {ja},
+	urldate = {2019-07-14},
+	journal = {Yahoo!ニュース 個人},
+	author = {Yamamoto, Ichiro},
+	month = dec,
+	year = {2018},
+	note = {幻冬舎から出版された百田尚樹さんの『日本国紀』刊行にあたり、その内容を巡って歴史的に正しくない説明が多く含まれ、またWikipediaや類書などからの引用表記なきコピペがあり批判が広がっています。},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\LVI87TKE\\20181222-00108643.html:text/html}
+}
+
+@misc{dong_ikon_2018,
+	title = {{iKON} member under fire for backing {Kitano} {Takeshi}},
+	url = {https://m.koreatimes.co.kr/pages/article.asp?newsIdx=256071},
+	abstract = {Koo Jun-hoe, from K-pop act iKON, is in the hot seat for backing anti-Korean Japanese filmmaker Kitano Takeshi on his Instagram Monday. The singer, whose stage name is Ju-ne, posted a photo with Takeshi's autograph on it and wrote in Japanese: "I appreciate Takeshi - please come to iKON's concert."},
+	urldate = {2019-07-14},
+	author = {Dong, Dong},
+	month = sep,
+	year = {2018},
+	note = {Koo Jun-hoe, from K-pop act iKON, is in the hot seat for backing anti-Korean Japanese filmmaker Kitano Takeshi on his Instagram Monday. The singer, whose stage name is Ju-ne, posted a photo with Takeshi's autograph on it and wrote in Japanese: "I appreciate Takeshi - please come to iKON's concert."},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\8IQU9BWS\\article.html:text/html}
+}
+
+@misc{hicap_ikons_2018,
+	title = {{iKON}'s {Junhoe} apologises after being called out by fan over {Japanese} comedian},
+	url = {https://metro.co.uk/2018/09/26/ikons-junhoe-apologises-after-being-called-out-by-fan-over-japanese-comedian-ahead-of-groups-comeback-7980418/},
+	abstract = {iKON member Junhoe has apologized after he got angry when a fan called him out on Instagram about an alleged ‘right-wing’ Japanese comedian who gave him a gift. What was...},
+	language = {en-US},
+	urldate = {2019-07-14},
+	journal = {Metro},
+	author = {Hicap, Jonah},
+	month = sep,
+	year = {2018},
+	note = {Junhoe was sent a gift from Takeshi Kitano and fans didn't approve.},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\KIRRMYJ5\\ikons-junhoe-apologises-after-being-called-out-by-fan-over-japanese-comedian-ahead-of-groups-co.html:text/html}
+}
+
+@misc{nast_i_nodate,
+	title = {“{I} {Was} {Devastated}”: {The} {Man} {Who} {Created} the {World} {Wide} {Web} {Has} {Some} {Regrets}},
+	shorttitle = {“{I} {Was} {Devastated}”},
+	url = {https://www.vanityfair.com/news/2018/07/the-man-who-created-the-world-wide-web-has-some-regrets},
+	abstract = {Berners-Lee has seen his creation debased by everything from fake news to mass surveillance. But he’s got a plan to fix it.},
+	language = {en},
+	urldate = {2019-07-14},
+	journal = {Vanity Fair},
+	author = {Nast, Condé},
+	note = {Tim Berners-Lee has seen his creation debased by everything from fake news to mass surveillance. But he’s got a plan to fix it.},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\LJBJZBXV\\the-man-who-created-the-world-wide-web-has-some-regrets.html:text/html}
+}
+
+@misc{_ban_2018,
+	title = {「ネトウヨ夏のＢＡＮ祭り」ヘイト裁きをグーグルに訴える意味},
+	url = {https://ironna.jp/article/10210},
+	abstract = {遠藤薫 ２０１８年５月、「ＹｏｕＴｕｂｅのネトウヨ動画を報告しまくって潰そうぜ」あるいは「ネトウヨ春(夏)のＢＡＮ祭り」の名のもとに、ヘイトスピーチと見なされるユーチューブ動画を通報するという「運動」が勃発した。 「削除運動」参加者の正体 社会悪を裁くのはＩＴ企業？},
+	language = {jp},
+	urldate = {2019-07-15},
+	journal = {オピニオンサイト「iRONNA（いろんな）」},
+	author = {遠藤, 薫},
+	month = jul,
+	year = {2018},
+	note = {遠藤薫 ２０１８年５月、「ＹｏｕＴｕｂｅのネトウヨ動画を報告しまくって潰そうぜ」あるいは「ネトウヨ春(夏)のＢＡＮ祭り」の名のもとに、ヘイトスピーチと見なされるユーチューブ動画を通報するという「運動」が勃発した。 「削除運動」参加者の正体 社会悪を裁くのはＩＴ企業？},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\DUWJ7V66\\10210.html:text/html}
+}
+
+@misc{sankei_news__2018,
+	type = {article.life.arts},
+	title = {ユーチューブの保守系チャンネルが相次ぎ閉鎖 「削除の基準、不透明」と批判},
+	url = {https://www.sankei.com/life/news/180806/lif1808060036-n1.html},
+	abstract = {差別発言の撲滅か、言論の自由の侵害か－。動画配信サイト「ユーチューブ」で５月以降、中国や韓国に批判的な保守系動画投稿者の利用停止が相次いでいる。背景には「差別的…},
+	language = {ja},
+	urldate = {2019-07-15},
+	journal = {産経ニュース},
+	author = {{Sankei News}},
+	month = aug,
+	year = {2018},
+	note = {差別発言の撲滅か、言論の自由の侵害か－。動画配信サイト「ユーチューブ」で５月以降、中国や韓国に批判的な保守系動画投稿者の利用停止が相次いでいる。背景には「差別的…},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\XTWCSWKS\\lif1808060036-n1.html:text/html}
+}
+
+@article{akimoto_accidental_2013,
+	title = {Accidental leak {IDs} over 30,000 'anonymous' 2channel users},
+	issn = {0447-5763},
+	url = {https://www.japantimes.co.jp/life/2013/09/17/digital/accidental-leak-ids-over-30000-anonymous-2channel-users/},
+	abstract = {Japan's most popular online bulletin-board service, 2channel (pronounced ni-chaneru), recently experienced what is probably the biggest problem in its 14-y},
+	language = {en-US},
+	urldate = {2019-07-15},
+	journal = {The Japan Times Online},
+	author = {Akimoto, Akky},
+	month = sep,
+	year = {2013},
+	file = {Japan Times Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\DRRGEJL3\\accidental-leak-ids-over-30000-anonymous-2channel-users.html:text/html}
+}
+
+@misc{okamoto_eng:_2018,
+	title = {Eng: {Compensation} {Order} for {Hoshu} {Sokuho} {Confirmed}, {Racism} on {Aggregation}-{Site}},
+	url = {https://www.asahi.com/articles/ASLDD65DWLDDUTIL05P.html},
+	abstract = {ネット上の差別的な投稿を集めたまとめサイト「保守速報」で名誉を傷つけられたとして、在日朝鮮人のフリーライター李信恵（リシネ）さんがサイト運営者に損害賠償を求めた訴訟で、運営者に２００万円の支払いを命…},
+	language = {ja},
+	urldate = {2019-07-15},
+	journal = {朝日新聞デジタル},
+	author = {Okamoto, Gen},
+	month = dec,
+	year = {2018},
+	note = {ネット上の差別的な投稿を集めたまとめサイト「保守速報」で名誉を傷つけられたとして、在日朝鮮人のフリーライター李信恵（リシネ）さんがサイト運営者に損害賠償を求めた訴訟で、運営者に２００万円の支払いを命…},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\UXT2CX3W\\ASLDD65DWLDDUTIL05P.html:text/html}
+}
+
+@misc{j-cast_news_eng:_2014,
+	title = {Eng: {Prime} {Minister} {Abe} {Introduces} "{Hoshu} {Sokuho}" on {Facebook} {With} {Repercussions}},
+	url = {http://www.j-cast.com/2014/11/25221620.html},
+	abstract = {安倍晋三首相のFacebookアカウントが2014年11月24日22時半ごろ、まとめサイト「保守速報」のリンクをシェアしたことが波紋を広げている。衆院解散に疑問を投げかける政治サイト「どうして解散するんですか？」をNPO法人「僕らの一歩が日本を変える。」代表の男子大学生が「小学4年生」になりすまして開設・運営したことが発覚し騒動となる中、安倍首相のFacebookも24日、これに言及。},
+	language = {ja},
+	urldate = {2019-07-15},
+	journal = {J-CASTニュース},
+	author = {{J-CAST News}},
+	month = nov,
+	year = {2014},
+	note = {安倍晋三首相のFacebookアカウントが2014年11月24日22時半ごろ、まとめサイト「保守速報」のリンクをシェアしたことが波紋を広げている。衆院解散に疑問を投げかける政治サイト「どうして解散するんですか？」をNPO法人「僕らの一歩が日本を変える。」代表の男子大学生が「小学4年生」になりすまして開設・運営したことが発覚し騒動となる中、安倍首相のFacebookも24日、これに言及。},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\752MAEPW\\25221620.html:text/html}
+}
+
+@misc{the_huffington_post_jp_lee_2014,
+	title = {Lee {Sinhae} sues {Zaitokukai} and {Hoshu} {Sokuho}},
+	url = {https://www.huffingtonpost.jp/2014/08/18/hate-speech_n_5689845.html},
+	abstract = {民族差別的な発言で名誉を傷つけられたなどとして、在日朝鮮人のフリーライターの女性が１８日、「在日特権を許さない市民の会」（在特会）と同会の桜井誠会長のほか、インターネットへの書き込みを掲載したブログの運営者に損害賠償を求める２件の訴訟を大阪地裁に起こした。弁護団によるとヘイトスピーチ（差別的憎悪表現）をめぐり、個人が損害賠償請求するのは初めて。},
+	language = {ja},
+	urldate = {2019-07-15},
+	journal = {ハフポスト},
+	author = {{The Huffington Post JP}},
+	month = aug,
+	year = {2014},
+	note = {民族差別的な発言で名誉を傷つけられたなどとして、在日朝鮮人のフリーライターの女性が１８日、「在日特権を許さない市民の会」（在特会）と同会の桜井誠会長のほか、インターネットへの書き込みを掲載したブログの運営者に損害賠償を求める２件の訴訟を大阪地裁に起こした。弁護団によるとヘイトスピーチ（差別的憎悪表現）をめぐり、個人が損害賠償請求するのは初めて。},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\JN2FN4JY\\hate-speech_n_5689845.html:text/html}
+}
+
+@misc{hatachi__2018,
+	title = {エプソンが保守速報への広告掲載をやめた 「嫌韓、嫌中の温床」との通報がきっかけに},
+	url = {https://www.buzzfeed.com/jp/kotahatachi/hoshusokuho},
+	abstract = {広告売り上げなど資金の流入を断つことで、ネットに溢れるヘイトやフェイクをも断つことはできるのか。},
+	language = {ja},
+	urldate = {2019-07-15},
+	journal = {BuzzFeed},
+	author = {Hatachi, Kota},
+	month = jun,
+	year = {2018},
+	note = {広告売り上げなど資金の流入を断つことで、ネットに溢れるヘイトやフェイクをも断つことはできるのか。},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\C38KWAVA\\hoshusokuho.html:text/html}
+}
+
+@misc{furuta_eng:_2018,
+	title = {Eng: {The} reason why {I} support "hoshu sokuho", we lsten to the assertion of a blogging councilor},
+	url = {https://www.buzzfeed.com/jp/takumiharimaya/hosyusokuhou-shinya-kotsubo},
+	abstract = {サイトの広告が消滅した後、福岡県行橋市の市議が支援の声を上げ、物販が始まった。},
+	language = {ja},
+	urldate = {2019-07-16},
+	journal = {BuzzFeed},
+	author = {Furuta, Daisuke and Harimaya, Takumi},
+	month = oct,
+	year = {2018},
+	note = {サイトの広告が消滅した後、福岡県行橋市の市議が支援の声を上げ、物販が始まった。},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\CQUJBD49\\hosyusokuhou-shinya-kotsubo.html:text/html}
+}
+
+@misc{ogawa_eng._2019,
+	type = {article.society.politics},
+	title = {Eng. [{National} breakthrough] {Suspicious} {Mass} {Deletion} of "{Net}-{Conservative} submissions" - {Aiming} at {Posters} {Harsh} to {China}},
+	url = {https://www.zakzak.co.jp/soc/news/190311/soc1903110003-n1.html},
+	abstract = {★（５）ネットの保守発信が危機にさらされている。ヘイト動画の大量削除運動として昨春始まった「ネトウヨ春のＢＡＮ祭」が、今に至るまで継続している。ＢＡＮ（バン）と…},
+	language = {ja},
+	urldate = {2019-07-16},
+	journal = {zakzak},
+	author = {Ogawa, Eitarō},
+	month = mar,
+	year = {2019},
+	note = {★（５）ネットの保守発信が危機にさらされている。ヘイト動画の大量削除運動として昨春始まった「ネトウヨ春のＢＡＮ祭」が、今に至るまで継続している。ＢＡＮ（バン）と…},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\6U3ZUC6M\\soc1903110003-n1.html:text/html}
+}
+
+@misc{shino_eng:_2018,
+	title = {Eng: {YouTube} is deleting {Expressions} of {Discrimination} {One} {After} {Another}, {Users} reporting},
+	url = {https://www.asahi.com/articles/ASL6W3WMYL6WUTIL011.html},
+	abstract = {ネット空間の差別的な表現にどう対処するか。利用者の「通報」をもとに、運営者側が投稿動画を削除したり、広告主が問題を指摘されたサイトへの広告を停止したりする動きが広がっている。差別表現がなくなると歓迎…},
+	language = {ja},
+	urldate = {2019-07-16},
+	journal = {朝日新聞デジタル},
+	author = {Shino, Ken'ichiro},
+	month = jul,
+	year = {2018},
+	note = {ネット空間の差別的な表現にどう対処するか。利用者の「通報」をもとに、運営者側が投稿動画を削除したり、広告主が問題を指摘されたサイトへの広告を停止したりする動きが広がっている。差別表現がなくなると歓迎…},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\PJKMXBKG\\ASL6W3WMYL6WUTIL011.html:text/html}
 }
